# Triton

./: LICENSE  README.md  pyproject.toml
docs/: CHANGES.md  CIRCULAR_IMPORT_FIX.md  COMPARISON.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPORT_STYLES.md  MIGRATION_CHECKLIST.md  QUICK_START.md  SUMMARY.md
examples/: test_imports.py  test_triton_neural.py  triton_neural_examples.py
src/: transformer.py  util.py
src/triton_neural/: __init__.py  core.py  train.py  transformer.py
src/triton_neural.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
